[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad Althafino",email = "malthafino36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
