[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad Althafino",email = "malthafino36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poe.tasks]
dev = "fastapi dev src/backend/app.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
